@@ -53,6 +53,7 @@ def build(bld):
         'utils/red-queue.cc',
         'utils/simple-channel.cc',
         'utils/simple-net-device.cc',
+        'utils/sll-header.cc',
         'utils/packet-socket-client.cc',
         'utils/packet-socket-server.cc',
         'utils/packet-data-calculators.cc',
@@ -138,6 +139,7 @@ def build(bld):
         'utils/sgi-hashmap.h',
         'utils/simple-channel.h',
         'utils/simple-net-device.h',
+        'utils/sll-header.h',
         'utils/packet-socket-client.h',
         'utils/packet-socket-server.h',
         'utils/pcap-test.h',
